Fixed z-index issue on .container

--- a/style.css
+++ b/style.css
@@ -70,13 +70,8 @@ body {
     height:     100%;
 }
 
-#container {
-    display: table-cell;
-    padding: 10px;
-    /* z-index: 2;*/
-    position: fixed;
-    top:  0px;
-    left: 0px;
+.container {
+    z-index: 200;
 }
 
 #game {
